[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gencube"
version = "1.0.0"
description = "GenCube enables researchers to search for, download, and unify genome assemblies and diverse types of annotations, and retrieve metadata for sequencing-based experimental data suitable for specific requirements."
readme = "README.md"
authors = [
  {name = "Keun Hong Son", email = "newhong@snu.ac.kr"}
]
maintainers = [
  {name = "Keun Hong Son", email = "newhong@snu.ac.kr"}
]
classifiers = [
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 4 - Beta",

  # Indicate who your project is intended for
  "Intended Audience :: Science/Research",

  # Pick your license as you wish (see also "license" above)
  "License :: OSI Approved :: MIT License",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Topic :: Utilities",

  # Specify the Python versions you support here.
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
license = {file = "LICENSE"}
dependencies = [
  "biopython>=1.79",
  "pandas>=1.0.0",
  "numpy>=1.21.0,<2",
  "requests>=2.25.1",
  "urllib3>=1.26.5",
  "xmltodict>=0.12.0",
  "beautifulsoup4>=4.9.3",
  "tqdm>=4.61.2",
  "tabulate>=0.8.9",
]
keywords = [
  "Genome", "Genomic", "Geneset", "Annotation", "Comparative", "Sequencing", "Metadata"
]

[project.optional-dependencies]
dev = [
  "coverage",  # testing
  "mypy",  # linting
  "pytest",  # testing
  "ruff"  # linting
]

[project.urls]
Homepage = "https://keun-hong.github.io/"
Repository = "https://github.com/snu-cdrc/gencube"
Bugs = "https://github.com/snu-cdrc/gencube/issues"
Changelog = "https://github.com/snu-cdrc/gencube/blob/master/changelog.md"

[project.scripts]
gencube = "gencube.__main__:main"

[tool.setuptools]
package-dir = {"gencube" = "gencube"}

[tool.setuptools.package-data]
"*" = ["*.*"]

# Mypy
[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_missing_imports = true
disable_error_code = "attr-defined"
