[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools_scm"]  # setuptools_scm는 선택 사항입니다.
build-backend = "setuptools.build_meta"

[project]
name = "gencube"
version = "1.11.0"
description = "GenCube enables researchers to search for, download, and unify genome assemblies and diverse types of annotations, and retrieve metadata for sequencing-based experimental data suitable for specific requirements."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.7,<4"

authors = [
  {name = "Keun Hong Son", email = "newhong@snu.ac.kr"}
]
maintainers = [
  {name = "Keun Hong Son", email = "newhong@snu.ac.kr"}
]
keywords = [
  "Genome", "Genomic", "Geneset", "Annotation", "Comparative", "Sequencing", "Metadata"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Topic :: Utilities",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "biopython>=1.79",
  "pandas>=1.3.0",
  "numpy>=1.21.0",
  "requests>=2.25.1",
  "urllib3>=1.26.5,<3.0",
  "xmltodict>=0.12.0",
  "beautifulsoup4>=4.9.3",
  "tqdm>=4.61.2",
  "tabulate>=0.8.9",
]

[project.optional-dependencies]
dev = [
  "coverage",
  "mypy",
  "pytest",
  "ruff",
]

[project.urls]
Homepage = "https://keun-hong.github.io/"
Repository = "https://github.com/snu-cdrc/gencube"
Bugs = "https://github.com/snu-cdrc/gencube/issues"
Changelog = "https://github.com/snu-cdrc/gencube/blob/master/changelog.md"

[project.scripts]
gencube = "gencube.__main__:main"

[tool.setuptools]
package-dir = {"" = "."}
packages = ["gencube"]

[tool.setuptools.package-data]
"gencube" = ["*.*"]

[tool.mypy]
files = "."
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_missing_imports = true
disable_error_code = "attr-defined"
